src/objects/dwp_kitv__Visit_Topic__c.object
<CustomObject>
    <description>Topics about visits</description>
    <fields>
        <fullName>Descripcion_tema__c</fullName>
        <description>Formula tipo enlace que permite mostrar la descripción del tema como un link al mismo.</description>
        <formula>HYPERLINK(&apos;/&apos;&amp; Id,dwp_kitv__topic_desc__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descripción</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_EU_TopicVisPlanCuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relacion a un Plan de Cuenta a un tema.</description>
        <label>Plan de Cuenta</label>
        <referenceTo>Ficha_de_conocimiento__c</referenceTo>
        <relationshipLabel>Temas a tratar</relationshipLabel>
        <relationshipName>MX_EU_TopicVisPlanesCuenta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_PYME_AccCamp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campañas y Temas</description>
        <label>Campaña del Cliente</label>
        <referenceTo>cond__Account_Campaign__c</referenceTo>
        <relationshipLabel>Temas a tratar</relationshipLabel>
        <relationshipName>Temas_a_tratar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tema_Oportunidad__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check que permite determinar si este tema proviende desde una oportunidad.</description>
        <label>Tema Oportunidad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>In this field you can link a case to a visit topic for automate the flow.</description>
        <inlineHelpText>Selecciona un caso</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Visit Topics</relationshipLabel>
        <relationshipName>Visit_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__More_Recent_Visits__c</fullName>
        <description>Deprecated</description>
        <formula>IF(ISPICKVAL(dwp_kitv__visit_id__r.dwp_kitv__visit_status_type__c,&apos;Finalized&apos;),TEXT(DATEVALUE(dwp_kitv__visit_id__r.dwp_kitv__visit_start_date__c))&amp;&apos; (&apos;&amp;TEXT(dwp_kitv__visit_id__r.dwp_kitv__visit_status_type__c)&amp;&apos;)&apos;,IF(dwp_kitv__visit_id__r.dwp_kitv__visit_end_date__c&lt;NOW(),&apos;Overdue&apos;,&apos; &apos;&amp;TEXT(DATEVALUE(dwp_kitv__visit_id__r.dwp_kitv__visit_start_date__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>More Recent Visits (Deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__most_recent_visits__c</fullName>
        <formula>IF(ISPICKVAL(dwp_kitv__visit_id__r.dwp_kitv__visit_status_type__c,&apos;Finalized&apos;),TEXT(DATEVALUE(dwp_kitv__visit_id__r.dwp_kitv__visit_start_date__c))&amp;&apos; (&apos;&amp;TEXT(dwp_kitv__visit_id__r.dwp_kitv__visit_status_type__c)&amp;&apos;)&apos;,IF(dwp_kitv__visit_id__r.dwp_kitv__visit_end_date__c&lt;NOW(),&apos;Overdue&apos;,&apos; &apos;&amp;TEXT(DATEVALUE(dwp_kitv__visit_id__r.dwp_kitv__visit_start_date__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most recent visits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__opportunity_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Opportunity</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Opportunity.IsClosed</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Visit Topics</relationshipLabel>
        <relationshipName>Visit_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__summary__c</fullName>
        <description>Formula field that gets the value from Opportunity Name and/or Topic Name.</description>
        <formula>IF(NOT(ISBLANK(dwp_kitv__opportunity_id__c )), IF(NOT(ISBLANK(dwp_kitv__topic_desc__c)), dwp_kitv__opportunity_id__r.Name + &apos; · &apos; + dwp_kitv__topic_desc__c, dwp_kitv__opportunity_id__r.Name), IF(NOT(ISBLANK(dwp_kitv__topic_desc__c)), dwp_kitv__topic_desc__c, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary Topic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__topic_desc__c</fullName>
        <description>Topic description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_done_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the visit is complete</description>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_id__c</fullName>
        <description>Parent Object</description>
        <label>Visit</label>
        <referenceTo>dwp_kitv__Visit__c</referenceTo>
        <relationshipLabel>Visit Topics</relationshipLabel>
        <relationshipName>Visit_Topics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Visit Topic</label>
    <nameField>
        <displayFormat>VT-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MX_EU_NoPermiteOportunidadesCerradas</fullName>
        <active>true</active>
        <description>Valida que no se puedan ligar oportunidades que estén cerradas durante la creación de un tema, y durante alguna modificación permite que este cerrada pero con fecha de modificación posterior.</description>
        <errorConditionFormula>AND(
                ISNEW(),
                dwp_kitv__opportunity_id__r.IsClosed
)</errorConditionFormula>
        <errorDisplayField>dwp_kitv__opportunity_id__c</errorDisplayField>
        <errorMessage>No se puede seleccionar una oportunidad cerrada</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_kitv__empty_topic</fullName>
        <active>true</active>
        <description>It&apos;s not allowed add a visit topic empty</description>
        <errorConditionFormula>ISBLANK(  dwp_kitv__topic_desc__c )</errorConditionFormula>
        <errorMessage>It&apos;s not allowed add a visit topic empty</errorMessage>
    </validationRules>
</CustomObject>